feat: se adicionó el primer post del post junto con los estilos.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         un recuerdo inolvidable.
                     </p>
                     <div class="box-buttons">
-                        <a href="#" class="btn btn-blue">Ver más</a>
+                        <a href="blog/perderse-en-canada.html" class="btn btn-blue">Ver más</a>
                     </div>
 
                 </div>
